# x-devops-opentelemetry-jaeger

./: README.md  docker-compose.yml
blackjack_api/: .env.sample  Dockerfile  manage.py  pyproject.toml  start.sh
blackjack_api/blackjack_api/: asgi.py  settings.py  wsgi.py
blackjack_api/core/: models.py  urls.py  views.py
blackjack_api/core/migrations/: 0001_initial.py
calculator_api/: .env.sample  Dockerfile  manage.py  pyproject.toml  start.sh
calculator_api/calculator_api/: asgi.py  settings.py  urls.py  wsgi.py
calculator_api/core/: serializers.py  urls.py  views.py
